--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .chat {
   background: white;
-  box-shadow: 10px 10px 0px blueviolet;
+  box-shadow: 10px 10px 0px rgb(116, 97, 134);
   overflow: scroll;
   height: 100%;
   display: flex;
