--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
 
 * {
-  font-family: "Inter", Arial;
-  font-size: 12pt;
+  font-family: Verdana, sans-serif;
+  font-size: 13pt;
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
   background: rgb(214, 214, 214);
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR49JE1b2H2qxWOl58ZWGrLeUda_sliGdqZ_g&usqp=CAU);
-  background-size: 400px,400px;
+  background-image: url(https://i.pinimg.com/564x/e8/f2/17/e8f217fd7f7f7e9612075f17c965c1a9.jpg);
+  background-size: 400px, 400px;
 }
 
 .title {
@@ -22,7 +22,7 @@ body {
 
 .title h1 {
   letter-spacing: 1px;
-  color: rgb(255, 255, 255);
+  color: rgb(3, 29, 19);
 }
 
 .wrapper {
@@ -30,7 +30,7 @@ body {
 }
 
 .chat {
-  background: rgb(240, 240, 240);
+  background: rgb(255, 255, 255);
   box-shadow: 20px 20px 0px rgb(68, 71, 4);
   overflow: scroll;
   height: 100%;
@@ -84,7 +84,7 @@ body {
   position: sticky;
   bottom: -1px;
   padding: 10px 0px 20px;
-  background: rgb(240, 240, 240);
+  background: rgb(255, 255, 255);
 }
 
 .actions input {
@@ -94,12 +94,12 @@ body {
   outline: 0;
   border-top: 0px;
   border-right: 0px;
-  border-bottom: 2px solid rgb(240, 240, 240);
+  border-bottom: 2px solid rgb(255, 255, 255);
   border-left: 0px;
 }
 
 input:focus {
-  border-bottom: 2px solid rgb(140, 139, 146);
+  border-bottom: 2px solid rgb(87, 87, 36);
 }
 
 @media all and (min-width: 720px) {
@@ -112,7 +112,7 @@ input:focus {
 
 @media all and (min-width: 1280px) {
   .wrapper {
-    width: 65vw;
+    width: 45vw;
   }
   .title {
     height: 10vh;
